apps/longhorn/configs/httproute-longhorn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "longhorn.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
